# nightshift

./: .gitignore  CLAUDE.md  LICENSE  README.md  nightshift.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cycles/cycle-00/: act.md  check.md  do.md  plan.md
cycles/cycle-01/: act.md  check.md  do.md  plan.md
cycles/cycle-02/: act.md  check.md  do.md  plan.md
cycles/cycle-03/: act.md  check.md  do.md  plan.md
cycles/cycle-04/: act.md  check.md  do.md  plan.md
scripts/: make_icon.py  probe_unclamped.py
src/nightshift/: __init__.py  __main__.py
src/nightshift/color/: controller.py  gamma.py  temperature.py
src/nightshift/config/: __init__.py  store.py
src/nightshift/display/: monitors.py
src/nightshift/platform/: __init__.py  autostart.py  fullscreen.py  registry.py
src/nightshift/schedule/: __init__.py  engine.py
src/nightshift/ui/: __init__.py  main_window.py  tray.py
tests/: test_autostart.py  test_config_store.py  test_controller.py  test_fullscreen.py  test_gamma_ramp.py  test_schedule_engine.py  test_temperature.py
