[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightshift"
version = "0.2.0"
description = "Windows multi-monitor color temperature controller (f.lux clone)"
requires-python = ">=3.11"
dependencies = [
    "pystray>=0.19",
    "Pillow>=10.0",
    "astral>=3.2",
]

[project.scripts]
nightshift = "nightshift.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
